<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >

    <string name="app_name" >Menu Find</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="protein">Enter the Amount of Protein (grams)</string>
    <string name="carbs">Enter the Amount of Carbs (grams)</string>
    <string name="fat">Enter the Amount of Fat (grams)</string>
    <string name="fiber">Enter the Amount of Fiber (grams)</string>
    <string name="protein_get">Get Foods</string>
    <string name="food_name">Food Name</string>
    <string name="restaurant">Restaurant</string>
    <string name="food_title">Foods</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="fat_name">Fat(g)</string>
    <string name="calories_name">Calories</string>
    <string name="carb_name">Carb(g)</string>
    <string name="protein_name">Protein(g)</string>
    <string name="protein_name_max">Protein(g) Max </string>
    <string name="protein_name_min">Protein(g) Min</string>
    <string name="fiber_name">Fiber(g)</string>
    <string name="save_food">Save Food</string>
    <string name="save_data">Save Food</string>
    <string name="foods_title">Foods</string>
    <string name="delete_button">Delete</string>
    <string name="add_button">Add New</string>
    <string name="add_food_tv">Add New Food</string>
    <string name="menuFind">Menu Find!</string>
    <string name="item_details">View and Edit</string>
    <string name="edit_button">Save Edit</string>
    <string name="sort_view">Order</string>
    <string name="calorieRadio">Cal</string>
    <string name="proteinRadio">Pro</string>
    <string name="orderBy">Order By:</string>
    <string name="sortBy">Sort Type:</string>
    <string name="fatRadio">Fat</string>
    <string name="carbRadio">Carb</string>
    <string name="fiberRadio">Fiber</string>
    <string name="fat_name_max">Fat(g) Max </string>
    <string name="fat_name_min">Fat(g) Min</string>
    <string name="carb_name_max">Carb(g) Max </string>
    <string name="carb_name_min">Carb(g) Min</string>
    <string name="fiber_name_max">Fiber(g) Max </string>
    <string name="fiber_name_min">Fiber(g) Min</string>
    <string name="num_results">Number of Results</string>
    <string name="sortASC">Ascending</string>
    <string name="sortDESC">Descending</string>
    <string name="searchFood">Search Food</string>
    <string name="map_button">Map</string>
    <string name="searchRestaurant">Search Restaurant</string>
    <string name="calorie_name_min">Calories Min</string>
    <string name="calorie_name_max">Calories Max</string>

</resources>